[Add] intrinsics link flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,28 @@ target_include_directories(SA_Support INTERFACE Include)
 target_compile_definitions(SA_Support INTERFACE SA_SUPPORT_IMPL)
 
 
+
+# Options
+
+## Add SA_Maths's tests to build tree.
+option(SA_SUPPORT_INTRINSICS_FLAGS_OPT "Should link intrinsics compile flags" ON)
+
+if(SA_SUPPORT_INTRINSICS_FLAGS_OPT)
+
+	if("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
+
+		target_compile_options(SA_Support INTERFACE /arch:AVX2)
+
+	else()
+
+		target_compile_options(SA_Support INTERFACE -mavx -mavx2)
+
+	endif()
+
+endif()
+
+
+
 # Helper Functions
 
 ## Max warning level (for testing).
@@ -48,3 +70,4 @@ function(SA_SetupMaxWarningLevel _target)
 	endif()
 	
 endfunction()
+
