[Update] intrinsics flags as cmake function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,27 +25,6 @@ target_compile_definitions(SA_Support INTERFACE SA_SUPPORT_IMPL)
 
 
 
-# Options
-
-## Add SA_Maths's tests to build tree.
-option(SA_SUPPORT_INTRINSICS_FLAGS_OPT "Should link intrinsics compile flags" ON)
-
-if(SA_SUPPORT_INTRINSICS_FLAGS_OPT)
-
-	if("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
-
-		target_compile_options(SA_Support INTERFACE /arch:AVX2)
-
-	else()
-
-		target_compile_options(SA_Support INTERFACE -mavx -mavx2)
-
-	endif()
-
-endif()
-
-
-
 # Helper Functions
 
 ## Max warning level (for testing).
@@ -71,3 +50,17 @@ function(SA_SetupMaxWarningLevel _target)
 	
 endfunction()
 
+
+function(SA_SetupIntrinsicsFlags _target _linkOpt)
+
+	if("${CMAKE_CXX_COMPILER_ID}" MATCHES "MSVC")
+
+		target_compile_options(${_target} ${_linkOpt} /arch:AVX2)
+
+	else()
+
+		target_compile_options(${_target} ${_linkOpt} -mavx -mavx2)
+
+	endif()
+
+endfunction()
