--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -14,24 +14,15 @@ on:
 # Job matrix
 jobs:
 
-  doxygen-gen:
-    name: Doxygen
+  Doxygen:
     runs-on: ubuntu-latest
-
-
-    # Steps execution.
+    
     steps:
-
-      - name: "[Action] Checkout repository"
-        uses: actions/checkout@v2
-
-      - name: "[Action] Generate"
-        uses: mattnotmitt/doxygen-action@v1.1.0
+      - uses: actions/checkout@v2
+      - uses: mattnotmitt/doxygen-action@v1.1.0
         with:
           doxyfile-path: "doxygen.config"
-
-      - name: "[Action] Deploy"
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: peaceiris/actions-gh-pages@v3
         with:
           force_orphan: true
           publish_dir: Doc/html
