--- a/.github/workflows/test_unix.yml
+++ b/.github/workflows/test_unix.yml
@@ -30,84 +30,48 @@ env:
 # Job matrix
 jobs:
 
-  ctests_unix:
-    name: ${{ matrix.config }} ${{ matrix.compiler }} ${{ matrix.compiler_v }}
-
-    # Setup environment.
+  GNU:
     runs-on: ubuntu-latest
-
     strategy:
-
-      # Don't cancel jobs on failure.
-      fail-fast: false
-
       matrix:
-
-        config:
-          - Debug
-          - Release
-
-        compiler:
-          - GNU
-          - Clang
-
+        config: [Debug, Release]
         compiler_v: [9, 10, 11]
 
-        gen:
-          - Ninja
-
-
-    # Steps execution.
     steps:
-
-        - name: "[Action] Checkout repository"
-          uses: actions/checkout@v2
-          with:
-            submodules: recursive
-
-
-         # Install GCC.
-        - name: "[Package] Install GCC"
-          if: ${{ matrix.compiler == 'GNU' }}
-          run: |
-              sudo apt-get install g++-${{ matrix.compiler_v }}
-              echo "CC=gcc-${{ matrix.compiler_v }}" >> $GITHUB_ENV
-              echo "CXX=g++-${{ matrix.compiler_v }}" >> $GITHUB_ENV
-
-
-        # Install Clang.
-        - name: "[Package] Install LLVM and Clang"
-          if: ${{ matrix.compiler == 'Clang' }}
-          run: |
-              sudo apt-get install clang-${{ matrix.compiler_v }}
-              echo "CC=clang-${{ matrix.compiler_v }}" >> $GITHUB_ENV
-              echo "CXX=clang++-${{ matrix.compiler_v }}" >> $GITHUB_ENV
+      - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@master # Install Ninja.
+      - name: "[Package] Install GCC"
+        run: |
+            sudo apt-get install g++-${{ matrix.compiler_v }}
+            echo "CC=gcc-${{ matrix.compiler_v }}" >> $GITHUB_ENV
+            echo "CXX=g++-${{ matrix.compiler_v }}" >> $GITHUB_ENV
+      - name: Generate Project
+        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G Ninja
+      - name: Build Project
+        run: cmake --build Build --config ${{ matrix.config }} --verbose
+      - name: Run CTests
+        run: cd Build && ctest -C ${{ matrix.config }} -V
 
 
-        # Install CMake.
-        - name: "[Action] Install CMake"
-          uses: jwlawson/actions-setup-cmake@v1.8
-          with:
-            cmake-version: ${{ env.CMAKE_V }}
+  Clang:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        config: [Debug, Release]
+        compiler_v: [9, 10, 11, 12]
 
-
-        # Install Ninja.
-        - name: "[Action] Install Ninja 1/2"
-          if: ${{ matrix.gen == 'Ninja' }}
-          uses: seanmiddleditch/gha-setup-ninja@master
-
-        # Set env variables.
-        - name: "[Command] Install Ninja 2/2"
-          if: ${{ matrix.gen == 'Ninja' }}
-          run: echo "GEN=Ninja" >> $GITHUB_ENV
-
-
-        # Deploy & Build & Test
-        - name: Generate Project
-          run: cmake -B Build/${{ matrix.gen }}/${{ matrix.config }} -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "${GEN}"
-
-        - name: Build Project
-          run: cmake --build Build/${{ matrix.gen }}/${{ matrix.config }} --config ${{ matrix.config }} --verbose
-
-        - name: Run CTests
-          run: cd Build/${{ matrix.gen }}/${{ matrix.config }} && ctest -C ${{ matrix.config }} -V
+    steps:
+      - uses: actions/checkout@v2
+      - uses: seanmiddleditch/gha-setup-ninja@master # Install Ninja.
+      - name: "[Package] Install LLVM and Clang"
+        if: ${{ matrix.compiler == 'Clang' }}
+        run: |
+            sudo apt-get install clang-${{ matrix.compiler_v }}
+            echo "CC=clang-${{ matrix.compiler_v }}" >> $GITHUB_ENV
+            echo "CXX=clang++-${{ matrix.compiler_v }}" >> $GITHUB_ENV
+      - name: Generate Project
+        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G Ninja
+      - name: Build Project
+        run: cmake --build Build --config ${{ matrix.config }} --verbose
+      - name: Run CTests
+        run: cd Build && ctest -C ${{ matrix.config }} -V
