--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # Visual Studio cache.
 .vs/
-out/
 
 
 # Vim cache.
@@ -10,7 +9,9 @@ out/
 
 
 # CMake cache.
+out/
 CMakeFiles/
+CMake/
 CMakeCache.txt
 Makefile
 *.cmake
