--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: mattnotmitt/doxygen-action@v1.1.0
         with:
-          doxyfile-path: "doxygen.config"
+          doxyfile-path: "Doc/doxygen.config"
       - uses: peaceiris/actions-gh-pages@v3
         with:
           force_orphan: true
