--- a/.github/workflows/test_macos.yml
+++ b/.github/workflows/test_macos.yml
@@ -33,6 +33,7 @@ jobs:
   Xcode:
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         config: [Debug, Release]
         compiler_v: [11.7, 12.5, latest-stable]
@@ -52,6 +53,7 @@ jobs:
   GNU:
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         config: [Debug, Release]
         compiler_v: [11]
