--- a/.github/workflows/test_unix.yml
+++ b/.github/workflows/test_unix.yml
@@ -34,6 +34,7 @@ jobs:
   GNU:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         config: [Debug, Release]
         compiler_v: [9, 10, 11]
@@ -57,6 +58,7 @@ jobs:
   Clang:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         config: [Debug, Release]
         compiler_v: [9, 10, 11, 12]
