--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -47,7 +47,7 @@ jobs:
 
 
   MSVC_2019:
-    runs-on: windows-latest
+    runs-on: windows-2019
     strategy:
       fail-fast: false
       matrix:
@@ -90,7 +90,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "Visual Studio 16 2019" -A x64 -T ClangCL
+        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "Visual Studio 17 2022" -A x64 -T ClangCL
       - name: Build Project
         run: cmake --build Build --config ${{ matrix.config }} --verbose
       - name: Run CTests
