--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,24 +1,7 @@
 # Copyright (c) 2022 Sapphire's Suite. All Rights Reserved.
 
 
-### Add Max warning level for tests.
-if(MSVC)
-
-	if(${CMAKE_CXX_COMPILER_ID} MATCHES "Clang") # ClangCl
-
-		target_compile_options(SA_Support PUBLIC -W4)
-
-	else()
-
-		target_compile_options(SA_Support PUBLIC /W4)
-
-	endif()
-
-else()
-
-	target_compile_options(SA_Support PUBLIC -Wall -Wextra)
-
-endif()
+SA_SetMaxWarningLevel(TARGET SA_Support)
 
 
 
