--- a/.github/workflows/test_macos.yml
+++ b/.github/workflows/test_macos.yml
@@ -40,6 +40,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: maxim-lobanov/setup-xcode@v1 # Install Xcode.
         with:
           xcode-version: ${{ matrix.compiler_v }}
@@ -60,6 +62,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - uses: seanmiddleditch/gha-setup-ninja@master # Install Ninja.
       - name: "[Package] Install GCC"
         run: |
