--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # Visual Studio cache.
 .vs/
+.vscode/*
+!.vscode/launch.json
+!.vscode/settings.json
 
 
 # Vim cache.
@@ -14,6 +17,9 @@ CMakeFiles/
 CMake/
 CMakeCache.txt
 Makefile
+
+# CMake cloned repo
+googletest/
 
 
 # Build and Temp files.
