--- a/.github/workflows/test_macos.yml
+++ b/.github/workflows/test_macos.yml
@@ -24,7 +24,7 @@ defaults:
 # Variables common to all jobs.
 env:
   CMAKE_V: '3.17.0'
-  CMAKE_OPTIONS: '-DSA_CI=1 -DSA_SUPPORT_BUILD_TESTS_OPT=ON'
+  CMAKE_OPTIONS: '-DSA_CI=1'
 
 
 # Job matrix
@@ -46,11 +46,11 @@ jobs:
         with:
           xcode-version: ${{ matrix.compiler_v }}
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }}
+        run: cmake --preset="Xcode" ${{ env.CMAKE_OPTIONS }}
       - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
+        run: cmake --build --preset="Xcode ${{ matrix.config }}" --verbose
       - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
+        run: ctest --preset="Xcode ${{ matrix.config }}" -V
 
   GNU:
     runs-on: macos-latest
@@ -66,13 +66,10 @@ jobs:
           submodules: recursive
       - uses: seanmiddleditch/gha-setup-ninja@master # Install Ninja.
       - name: "[Package] Install GCC"
-        run: |
-            brew install gcc@${{ matrix.compiler_v }}
-            echo "CC=gcc-${{ matrix.compiler_v }}" >> $GITHUB_ENV
-            echo "CXX=g++-${{ matrix.compiler_v }}" >> $GITHUB_ENV
+        run: brew install gcc@${{ matrix.compiler_v }}
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G Ninja
+        run: cmake --preset="GCC ${{ matrix.config }}" ${{ env.CMAKE_OPTIONS }}
       - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
+        run: cmake --build --preset="GCC ${{ matrix.config }}" --verbose
       - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
+        run: ctest --preset="GCC ${{ matrix.config }}" -V
