--- a/.github/workflows/test_windows.yml
+++ b/.github/workflows/test_windows.yml
@@ -23,30 +23,11 @@ defaults:
 
 # Variables common to all jobs.
 env:
-  CMAKE_OPTIONS: '-DSA_CI=1 -DSA_SUPPORT_BUILD_TESTS_OPT=ON'
+  CMAKE_OPTIONS: '-DSA_CI=1'
 
 
 # Job matrix
 jobs:
-
-  MSVC_2017:
-    runs-on: windows-2016
-    strategy:
-      fail-fast: false
-      matrix:
-        config: [Debug, Release]
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "Visual Studio 15 2017" -A x64
-      - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
-      - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
-
 
   MSVC_2019:
     runs-on: windows-2019
@@ -60,11 +41,11 @@ jobs:
         with:
           submodules: recursive
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "Visual Studio 16 2019" -A x64
+        run: cmake --preset=VS_2019 ${{ env.CMAKE_OPTIONS }}
       - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
+        run: cmake --build --preset="VS_2019 ${{ matrix.config }}" --verbose
       - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
+        run: ctest --preset="VS_2019 ${{ matrix.config }}" -V
 
 
   MSVC_2022:
@@ -79,11 +60,11 @@ jobs:
         with:
           submodules: recursive
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "Visual Studio 17 2022" -A x64
+        run: cmake --preset=VS_2022 ${{ env.CMAKE_OPTIONS }}
       - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
+        run: cmake --build --preset="VS_2022 ${{ matrix.config }}" --verbose
       - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
+        run: ctest --preset="VS_2022 ${{ matrix.config }}" -V
 
 
   ClangCL:
@@ -98,11 +79,11 @@ jobs:
         with:
           submodules: recursive
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G "Visual Studio 17 2022" -A x64 -T ClangCL
+        run: cmake --preset=VS_ClangCL ${{ env.CMAKE_OPTIONS }}
       - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
+        run: cmake --build --preset="VS_ClangCL ${{ matrix.config }}" --verbose
       - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
+        run: ctest --preset="VS_ClangCL ${{ matrix.config }}" -V
 
 
   Clang:
@@ -117,13 +98,9 @@ jobs:
         with:
           submodules: recursive
       - uses: seanmiddleditch/gha-setup-ninja@master # Install Ninja.
-      - name: "[Command] Install LLVM & Clang"
-        run: |
-            echo "CC=C:/Program Files/LLVM/bin/clang" >> $GITHUB_ENV
-            echo "CXX=C:/Program Files/LLVM/bin/clang++" >> $GITHUB_ENV
       - name: Generate Project
-        run: cmake -B Build -DCMAKE_BUILD_TYPE=${{ matrix.config }} ${{ env.CMAKE_OPTIONS }} -G Ninja
+        run: cmake --preset="Clang ${{ matrix.config }}" ${{ env.CMAKE_OPTIONS }}
       - name: Build Project
-        run: cmake --build Build --config ${{ matrix.config }} --verbose
+        run: cmake --build --preset="Clang ${{ matrix.config }}" --verbose
       - name: Run CTests
-        run: cd Build && ctest -C ${{ matrix.config }} -V
+        run: ctest --preset="Clang ${{ matrix.config }}" -V
