--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,48 +2,35 @@
 
 cmake_minimum_required(VERSION 3.16)
 
+# Sapphire Suite's CMake tools.
+add_subdirectory(CMake)
+
 
 
 # Project
 
 project(SA_Support)
-
-message("SA_Support Main directory: ${CMAKE_CURRENT_SOURCE_DIR}")
+SA_ConfigureProject(SA_Support)
 
 
 
 # Library
 
-## Input.
-file(GLOB_RECURSE SA_SUPPORT_SOURCES "Source/*")
+add_library(SA_Support STATIC)
 
-## Static library.
-add_library(SA_Support STATIC ${SA_SUPPORT_SOURCES})
-
-## Include directories
-target_include_directories(SA_Support PUBLIC Include)
-target_include_directories(SA_Support PRIVATE Include/SA/Support)
-
-## Compile features
-
-### Standard
-target_compile_features(SA_Support PUBLIC c_std_11)
-target_compile_features(SA_Support PUBLIC cxx_std_20)
-
-### SA_Support module implementation preprocessor.
-target_compile_definitions(SA_Support PUBLIC SA_SUPPORT_IMPL)
+SA_ConfigureTarget(TARGET SA_Support)
+SA_TargetSources(TARGET SA_Support)
 
 
 
 # Options
 
-## Add SA_Maths's tests to build tree.
-option(SA_SUPPORT_BUILD_TESTS_OPT "Should build SA_Maths tests" OFF)
+## Add SA_Support's tests to build tree.
+option(SA_SUPPORT_BUILD_TESTS_OPT "Should build SA_Support tests" OFF)
+
 
 
 # Entrypoints
-
-add_subdirectory(ThirdParty)
 
 if(SA_SUPPORT_BUILD_TESTS_OPT)
 
@@ -53,4 +40,3 @@ if(SA_SUPPORT_BUILD_TESTS_OPT)
 	add_subdirectory(Tests)
 
 endif()
-
