--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 # CMake cache.
 out/
 CMakeFiles/
-CMake/
 CMakeCache.txt
 Makefile
 
@@ -25,6 +24,7 @@ googletest/
 # Build and Temp files.
 [Bb]uild/
 [Bb]uilds/
+[Ii]ntall/
 
 [Bb]in/
 
