--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "CMake"]
-	path = CMake
+[submodule "ThirdParty/SA/CMake"]
+	path = ThirdParty/SA/CMake
 	url = https://github.com/SapphireSuite/CMake.git
